--- a/.vscode/launch.template.json
+++ b/.vscode/launch.template.json
@@ -1,20 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Django",
-            "type": "python",
+            "name": "Debug Baby Buddy",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/manage.py",
+            "python": "${workspaceFolder}/.venv/bin/python",
             "env": {
                 "DEBUG": "False"
             },
             "args": [
                 "runserver"
             ],
+            "console": "integratedTerminal",
             "django": true,
             "justMyCode": true
         }
