Lock django-import-export to v3

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ django = "~=5.0"
 django-axes = "*"
 django-filter = "*"
 django-imagekit = "*"
-django-import-export = "*"
 django-storages = "*"
 django-widget-tweaks = "*"
 djangorestframework = "*"
@@ -26,6 +25,7 @@ whitenoise = "*"
 django-taggit = "*"
 django-qr-code = "*"
 django-dbsettings = "*"
+django-import-export = "~=3.0"
 
 [dev-packages]
 coveralls = "*"
