Next Sleep dashboard widget

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ boto3 = "*"
 dj-database-url = "*"
 django = "~=5.0"
 django-axes = "*"
+django-enumfield = "*"
 django-filter = "*"
 django-imagekit = "*"
 django-storages = "*"
