--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 -i https://pypi.python.org/simple
-annotated-types==0.6.0; python_version >= '3.8'
+annotated-types==0.7.0; python_version >= '3.8'
 asgiref==3.8.1; python_version >= '3.8'
-boto3==1.34.102; python_version >= '3.8'
-botocore==1.34.102; python_version >= '3.8'
+boto3==1.34.117; python_version >= '3.8'
+botocore==1.34.117; python_version >= '3.8'
 diff-match-patch==20230430; python_version >= '3.7'
-dj-database-url==2.1.0
+dj-database-url==2.2.0
 django==5.0.6; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
 django-axes==6.4.0; python_version >= '3.7'
 django-dbsettings==1.3.0
+django-enumfield==3.1
 django-filter==24.2; python_version >= '3.8'
 django-imagekit==5.0.0
-django-import-export[all]==4.0.1; python_version >= '3.8'
-django-qr-code==4.0.1; python_version >= '3.8'
+django-import-export==4.0.7; python_version >= '3.8'
+django-qr-code==4.1.0; python_version >= '3.10'
 django-storages==1.14.3; python_version >= '3.7'
 django-taggit==5.0.1; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
 djangorestframework==3.15.1; python_version >= '3.6'
-faker==25.1.0; python_version >= '3.8'
+faker==25.3.0; python_version >= '3.8'
 gunicorn==22.0.0; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 packaging==24.0; python_version >= '3.7'
@@ -25,8 +26,8 @@ pilkit==3.0
 pillow==10.3.0; python_version >= '3.8'
 plotly==5.22.0; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
-pydantic==2.7.1; python_version >= '3.8'
-pydantic-core==2.18.2; python_version >= '3.8'
+pydantic==2.7.2; python_version >= '3.8'
+pydantic-core==2.18.3; python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1; python_version >= '3.8'
 pyyaml==6.0.1; python_version >= '3.6'
@@ -34,9 +35,9 @@ s3transfer==0.10.1; python_version >= '3.8'
 segno==1.6.1; python_version >= '3.5'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.5.0; python_version >= '3.8'
-tablib[all,html,ods,xls,xlsx,yaml]==3.5.0; python_version >= '3.8'
+tablib==3.5.0; python_version >= '3.8'
 tenacity==8.3.0; python_version >= '3.8'
-typing-extensions==4.11.0; python_version >= '3.8'
+typing-extensions==4.12.1; python_version >= '3.8'
 uritemplate==4.1.1; python_version >= '3.6'
 urllib3==2.2.1; python_version >= '3.10'
 whitenoise==6.6.0; python_version >= '3.8'
