--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==2.2.0
 django==5.0.6; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
 django-axes==6.5.0; python_version >= '3.7'
+django-cors-headers==4.4.0; python_version >= '3.8'
 django-dbsettings==1.3.0
 django-filter==24.2; python_version >= '3.8'
 django-imagekit==5.0.0
