--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -20,7 +20,7 @@ spec:
         - key: DISABLE_COLLECTSTATIC
           scope: BUILD_TIME
           type: GENERAL
-          value: 1
+          value: "1"
         - key: SECRET_KEY
           scope: RUN_AND_BUILD_TIME
           type: SECRET
