--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,44 @@
 -i https://pypi.python.org/simple
 annotated-types==0.7.0; python_version >= '3.8'
 asgiref==3.8.1; python_version >= '3.8'
-boto3==1.34.127; python_version >= '3.8'
-botocore==1.34.127; python_version >= '3.8'
+boto3==1.35.10; python_version >= '3.8'
+botocore==1.35.10; python_version >= '3.8'
 diff-match-patch==20230430; python_version >= '3.7'
 dj-database-url==2.2.0
-django==5.0.6; python_version >= '3.10'
+django==5.1; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
-django-axes==6.5.0; python_version >= '3.7'
+django-axes==6.5.1; python_version >= '3.7'
 django-cors-headers==4.4.0; python_version >= '3.8'
 django-dbsettings==1.3.0
-django-filter==24.2; python_version >= '3.8'
+django-filter==24.3; python_version >= '3.8'
 django-imagekit==5.0.0
-django-import-export[all]==4.0.8; python_version >= '3.8'
+django-import-export[all]==4.1.1; python_version >= '3.8'
 django-qr-code==4.1.0; python_version >= '3.10'
-django-storages==1.14.3; python_version >= '3.7'
-django-taggit==5.0.1; python_version >= '3.8'
+django-storages==1.14.4; python_version >= '3.7'
+django-taggit==6.0.0; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
-djangorestframework==3.15.1; python_version >= '3.6'
-faker==25.8.0; python_version >= '3.8'
-gunicorn==22.0.0; python_version >= '3.7'
+djangorestframework==3.15.2; python_version >= '3.8'
+faker==28.1.0; python_version >= '3.8'
+gunicorn==23.0.0; python_version >= '3.7'
+inflection==0.5.1; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
 packaging==24.1; python_version >= '3.8'
 pilkit==3.0
-pillow==10.3.0; python_version >= '3.8'
-plotly==5.22.0; python_version >= '3.8'
+pillow==10.4.0; python_version >= '3.8'
+plotly==5.24.0; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
-pydantic==2.7.4; python_version >= '3.8'
-pydantic-core==2.18.4; python_version >= '3.8'
+pydantic==2.8.2; python_version >= '3.8'
+pydantic-core==2.20.1; python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1; python_version >= '3.8'
-pyyaml==6.0.1; python_version >= '3.6'
-s3transfer==0.10.1; python_version >= '3.8'
+pyyaml==6.0.2; python_version >= '3.8'
+s3transfer==0.10.2; python_version >= '3.8'
 segno==1.6.1; python_version >= '3.5'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.5.0; python_version >= '3.8'
+sqlparse==0.5.1; python_version >= '3.8'
 tablib[all,html,ods,xls,xlsx,yaml]==3.5.0; python_version >= '3.8'
-tenacity==8.3.0; python_version >= '3.8'
+tenacity==9.0.0; python_version >= '3.8'
 typing-extensions==4.12.2; python_version >= '3.8'
 uritemplate==4.1.1; python_version >= '3.6'
-urllib3==2.2.1; python_version >= '3.10'
-whitenoise==6.6.0; python_version >= '3.8'
+urllib3==2.2.2; python_version >= '3.10'
+whitenoise==6.7.0; python_version >= '3.8'
