--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ boto3==1.35.54; python_version >= '3.8'
 botocore==1.35.54; python_version >= '3.8'
 diff-match-patch==20241021; python_version >= '3.7'
 dj-database-url==2.3.0
-django==5.1.2; python_version >= '3.10'
+django==5.1.3; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
 django-axes==7.0.0; python_version >= '3.7'
 django-cors-headers==4.6.0; python_version >= '3.9'
 django-dbsettings==1.3.0
 django-filter==24.3; python_version >= '3.8'
 django-imagekit==5.0.0
-django-import-export[all]==4.2.0; python_version >= '3.9'
+django-import-export==4.2.0; python_version >= '3.9'
 django-qr-code==4.1.0; python_version >= '3.10'
 django-storages==1.14.4; python_version >= '3.7'
 django-taggit==6.1.0; python_version >= '3.8'
@@ -29,14 +29,14 @@ plotly==5.24.1; python_version >= '3.8'
 psycopg2-binary==2.9.10; python_version >= '3.8'
 pydantic==2.9.2; python_version >= '3.8'
 pydantic-core==2.23.4; python_version >= '3.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 python-dotenv==1.0.1; python_version >= '3.8'
 pyyaml==6.0.2; python_version >= '3.8'
 s3transfer==0.10.3; python_version >= '3.8'
 segno==1.6.1; python_version >= '3.5'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 sqlparse==0.5.1; python_version >= '3.8'
-tablib[all,html,ods,xls,xlsx,yaml]==3.7.0; python_version >= '3.9'
+tablib==3.7.0; python_version >= '3.9'
 tenacity==9.0.0; python_version >= '3.8'
 typing-extensions==4.12.2; python_version >= '3.8'
 uritemplate==4.1.1; python_version >= '3.6'
