feat: Add audit log for all models
Refs: #900

--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ django-cors-headers = "*"
 django-dbsettings = "*"
 django-import-export = "*"
 inflection = "*"
+django-auditlog = "*"
 
 [dev-packages]
 coveralls = "*"
