Add links to entry history

--- a/babybuddy/static_src/fontello/config.json
+++ b/babybuddy/static_src/fontello/config.json
@@ -146,7 +146,7 @@
     },
     {
       "uid": "d4816c0845aa43767213d45574b3b145",
-      "css": "timeline",
+      "css": "history",
       "code": 61914,
       "src": "fontawesome"
     },
