--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 boto3 = "*"
 dj-database-url = "*"
 django = "~=5.1.1"
+django-auth-ldap = "*"
 django-axes = "*"
 django-filter = "*"
 django-imagekit = "*"
@@ -19,6 +20,7 @@ pillow = "*"
 plotly = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
+python-ldap = ">3.1"
 pyyaml = "*"
 uritemplate = "*"
 whitenoise = "*"
