--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ diff-match-patch==20241021; python_version >= '3.7'
 dj-database-url==2.3.0
 django==5.1.4; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
+django-auth-ldap==5.1.0
 django-axes==7.0.1; python_version >= '3.7'
 django-cors-headers==4.6.0; python_version >= '3.9'
 django-dbsettings==1.3.0
@@ -31,6 +32,7 @@ pydantic==2.10.4; python_version >= '3.8'
 pydantic-core==2.27.2; python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 python-dotenv==1.0.1; python_version >= '3.8'
+python-ldap==3.4.4
 pyyaml==6.0.2; python_version >= '3.8'
 s3transfer==0.10.4; python_version >= '3.8'
 segno==1.6.1; python_version >= '3.5'
