chore: Update project dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ djangorestframework = "*"
 faker = "*"
 gunicorn = "*"
 pillow = "*"
-plotly = "*"
+plotly = "~=5.24"
 psycopg2-binary = "*"
 python-dotenv = "*"
 pyyaml = "*"
